# gen_tbr_resource

./: .gitignore  README.md  pyproject.toml
gen_tbr_resource/: __init__.py  dict_filter.py  entry.py  file_reader.py  parse2vocabs.py  parser.py  querydb.py  vocab_csv_writer.py
tests/: plain.txt  subtitle.srt  test_dict_filter.py  test_file_reader.py  test_gen_tbr_resource.py  test_parser.py
